--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "source": "/(.*)",
       "headers": [
         {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://connect.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://*.supabase.co https://api.stripe.com https://connect.stripe.com wss://*.supabase.co; frame-src 'self' https://connect.stripe.com https://js.stripe.com; object-src 'none'; base-uri 'self';"
+        },
+        {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
         },
