security: Remove exposed Supabase CLI binary and prevent future exposure
CRITICAL SECURITY FIX:
- Remove supabase-bin containing embedded MessageBird API keys
- Add comprehensive .gitignore rules for binaries and sensitive files
- Prevent future accidental secret exposure in repository

This addresses GitHub security alerts for exposed API keys in commit f11881f5.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,15 @@ dist-ssr
 .env.development
 .env.production
 
+# Supabase CLI binary (contains embedded secrets)
+supabase-bin
+supabase
+supabase-cli*
+
+# Other binaries and sensitive files
+*.tar.gz
+*.zip
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
